# gamecheater

./: .gitattributes  AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  README.zh_CN.UTF8  aclocal.m4  config.h.in  configure  configure.ac  configure.in
glade/: Makefile.am  Makefile.in  editor.glade  gamecheater.glade  input.glade  replace.glade  search.glade
libgcheater/: Makefile.am  Makefile.in  libgcheater.c  libgcheater.h
pixmaps/: Makefile.am  Makefile.in
po/: ChangeLog  Makefile.in.in  POTFILES.in  gamecheater.pot  zh_CN.gmo  zh_CN.po
src/: Makefile.am  Makefile.in  editor.c  editor.h  gamecheater.c  gamecheater.h  process.c  process.h  search.c  search.h
ui/: Makefile.am  Makefile.in  editor.ui  gamecheater.ui  input.ui  replace.ui  search.ui
