#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

PACKAGE=gamecheater
VERSION=0.3
EMAIL=h980501427@hotmail.com

AC_INIT(gamecheater, 0.3, h980501427@hotmail.com)
AM_INIT_AUTOMAKE(gamecheater, 0.3)
AM_CONFIG_HEADER([config.h])
AM_MAINTAINER_MODE

AC_CONFIG_SRCDIR([src/gamecheater.c])

AM_MAINTAINER_MODE

# Checks for programs.
AC_PROG_CC
AM_PROG_CC_STDC

# Checks for pkg-config.
PKG_CHECK_MODULES(DEPS, gtk+-2.0 >= 2.6 gthread-2.0 >= 2.6 libglade-2.0 >= 2.4)
AC_SUBST(DEPS_CFLAGS)
AC_SUBST(DEPS_LIBS)


# Checks for header files.
AC_HEADER_STDC
AC_HEADER_SYS_WAIT
AC_CHECK_HEADERS([stdlib.h string.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_UID_T

# Checks for library functions.
AC_FUNC_STAT
AC_CHECK_FUNCS([ptrace memset strncasecmp])

# i18n
ALL_LINGUAS="zh_CN"
AM_GLIB_GNU_GETTEXT

AC_OUTPUT([
Makefile
src/Makefile
pixmaps/Makefile
glade/Makefile
po/Makefile.in
])

